force-app/main/default/objects/Job__c/fields/Current_Full_Time_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Full_Time_Position__c</fullName>
    <formula>IF( ISBLANK( End_Date__c ) , TRUE, FALSE)</formula>
    <label>Current Full Time Position</label>
    <type>Checkbox</type>
</CustomField>