force-app/main/default/objects/Job__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF( ISBLANK( End_Date__c ) , 

 

 IF(FLOOR((TODAY()- Start_Date__c)/365)&gt;0, TEXT(FLOOR((TODAY()- Start_Date__c)/365)) &amp;&apos; Years&apos; &amp; &apos; &apos;, &apos;&apos;) 

 &amp; 
 

TEXT(FLOOR(MOD((TODAY()- Start_Date__c),365)/30)) &amp;&apos; Months&apos; &amp; &apos; &apos; &amp; 
 

TEXT(MOD(MOD((TODAY()- Start_Date__c),365),30)) &amp;&apos; Days&apos;


, 


 IF(FLOOR((End_Date__c - Start_Date__c )/365)&gt;0, TEXT(FLOOR((End_Date__c - Start_Date__c )/365)) &amp;&apos; Years&apos; &amp; &apos; &apos;, &apos;&apos;) 

 &amp; 
 

TEXT(FLOOR(MOD((End_Date__c - Start_Date__c ),365)/30)) &amp;&apos; Months&apos; &amp; &apos; &apos; &amp; 
 

TEXT(MOD(MOD((End_Date__c - Start_Date__c ),365),30)) &amp;&apos; Days&apos;





)</formula>
    <label>Duration</label>
    <type>Text</type>
</CustomField>