force-app/main/default/objects/Job__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <defaultValue>&quot;utility:case&quot;</defaultValue>
    <description>use this to control the icon displayed on the resume LWC</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>